--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "node tests/tests.js"
+    "test": "jest",
+    "int-test": "node test/int_tests.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,21 @@
   "bugs": {
     "url": "https://github.com/pphelps28/testing-calculator-repo/issues"
   },
-  "homepage": "https://github.com/pphelps28/testing-calculator-repo#readme"
+  "homepage": "https://github.com/pphelps28/testing-calculator-repo#readme",
+  "dependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-jest": "^26.6.3",
+    "chai": "^4.2.0",
+    "jest-environment-jsdom": "^26.6.2",
+    "mocha": "^8.2.1"
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^7.29.4",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/user-event": "^12.6.2",
+    "jest": "^26.6.3",
+    "jsdom": "^16.4.0",
+    "jsdom-global": "^3.0.2"
+  }
 }
